# rest_client

./: CMakeLists.txt  README.md
cli/: main.cpp
gui/: WinMain.cpp  app.rc  resource.h
include/common/: HttpCommon.hpp  Logger.hpp
include/models/: Token.hpp  UploadResult.hpp  User.hpp
include/net/: CurlHttpClient.hpp  IHttpClient.hpp  RetryingHttpClient.hpp
include/services/: AuthService.hpp  UploadService.hpp  UserService.hpp
src/: main.cpp  parser.hpp
src/net/: CurlHttpClient.cpp  RetryingHttpClient.cpp
src/services/: AuthService.cpp  UploadService.cpp  UserService.cpp
